<resources>
    <string name="app_name">Cold Fire Networking</string>

    <string name="Hofstra"> Hofstra Pride</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="terms">By creating an account, you agree to our terms and conditions. </string>
    <string name="terms2">Contact the developers to get your login details if you forget it
        .</string>

    <string name="loginerror">Invalid Log In Details</string>
    <string name="loginerror2">Network Error</string>

    <string name="action_settings">Settings</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">minutes ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hour_ago">hours ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago">days ago</string>
    <string name="title_activity_chapters">ChaptersActivity</string>
    <string name="next">Next</string>

    <string name="first1">Let\'s get to know you!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_first_time">FirstTime</string>

    <string name="interest">Field of Interest</string>
    <string name="tags">Additional Interest Tags</string>
    <string name="years">Years Remaining in Program</string>

    <string name="servererror">Server Unavailable.</string>

    <string name="previous">Previous Classes</string>
    <string name="current">Current Classes</string>
    <string name="future">Future Possible Classes</string>

    <!--
    <string-array name="department_array">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
    -->
</resources>
