<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.ekpro.coldfire.FirstTime">

    <LinearLayout
        android:id="@+id/llLogIn"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:background="@color/lightGreen500">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/first1"
            android:textColor="@color/classesTextColor"
            android:textSize="35dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlDiveIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/llLogIn"
        android:animateLayoutChanges="true"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="50dp">

        <RelativeLayout
            android:id="@+id/llTermsConditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:layout_weight="1"/>

            <Button
                android:text="@string/interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:onClick="ChooseInterests"
                android:layout_below="@id/spinner"
                android:layout_weight="1"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fieldInterest"
                android:layout_below="@id/button2"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etInterest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:hint="@string/tags"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="10"
                    android:paddingBottom="20dp"
                    android:maxLines="1"
                    android:textColor="@color/classesGreen"
                    android:textColorHighlight="@color/colorGreenHighlight"
                    android:textColorHint="@color/colorGrayHint"
                    android:textSize="17sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/years"
                android:layout_below="@id/fieldInterest"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etYears"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:hint="@string/years"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingBottom="20dp"
                    android:maxLines="1"
                    android:textColor="@color/classesGreen"
                    android:textColorHighlight="@color/colorGreenHighlight"
                    android:textColorHint="@color/colorGrayHint"
                    android:textSize="17sp" />
            </android.support.design.widget.TextInputLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/llTermsConditions"
            android:background="@color/transparent"
            android:gravity="end">

            <Button
                android:id="@+id/btnNext"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/classesGreen"
                android:elevation="2dp"
                android:gravity="center"
                android:text="@string/next"
                android:textAllCaps="true"
                android:textColor="@color/classesTextColor"
                android:onClick="ActualWork"
                android:textSize="14sp"
                tools:visibility="visible"
                android:visibility="gone" />
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>
