<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                tools:context="com.ekpro.coldfire.LoginActivity">

    <LinearLayout
        android:id="@+id/llLogIn"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/hofstra_logo"
            android:layout_above="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:id="@+id/imageView2"/>

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/hofstra_logo"
        android:scaleType="centerCrop"
        android:alpha="0.4"
        android:adjustViewBounds="false"
        android:cropToPadding="false" />

    <RelativeLayout
        android:id="@+id/rlDiveIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/llLogIn"
        android:animateLayoutChanges="true"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="50dp">


        <RelativeLayout
            android:id="@+id/rlMobileNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ilUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="309dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingBottom="20dp"
                    android:maxLines="1"
                    android:textColor="@color/classesGreen"
                    android:textColorHighlight="@color/colorGreenHighlight"
                    android:textColorHint="@color/colorGrayHint"
                    android:textSize="17sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ilUsername">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:paddingBottom="20dp"
                    android:maxLines="1"
                    android:textColor="@color/classesGreen"
                    android:textColorHighlight="@color/colorGreenHighlight"
                    android:textColorHint="@color/colorGrayHint"
                    android:textSize="17sp" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignRight="@+id/ilUsername"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:scaleType="fitXY"
                 />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llTermsConditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlMobileNumber"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:maxLines="2"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:textColor="@android:color/secondary_text_dark" />

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:paddingTop="5dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTermsConditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autoLink="web"
                    android:text="@string/terms2"
                    android:gravity="center"
                    android:textColor="@android:color/tab_indicator_text" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/llTermsConditions"
            android:background="@color/transparent"
            android:gravity="end">

            <Button
                android:id="@+id/btnNext"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/classesGreen"
                android:elevation="2dp"
                android:gravity="center"
                android:text="@string/next"
                android:textAllCaps="true"
                android:textColor="@color/classesTextColor"
                android:textSize="14sp"
                tools:visibility="visible"
                android:visibility="gone" />
        </RelativeLayout>

    </RelativeLayout>

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log In"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:textStyle="normal|bold"
        android:layout_above="@+id/rlDiveIn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp" />
        -->

</RelativeLayout>
